samples/_failures_safe/1761372787_22dbec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15a086ad.c: In function ‘main’:
./samples/SAFE/__tmp_15a086ad.c:170:5: error: expected expression at end of input
  170 |     printf("Enter text to tokenize (max %zu characters):\n", sizeof(input) -
      |     ^~~~~~
./samples/SAFE/__tmp_15a086ad.c:170:5: error: expected declaration or statement at end of input
